force-app/main/default/objects/Order/fields/netsuite_conn__Celigo_Update__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Celigo_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Celigo Update</label>
    <type>Checkbox</type>
</CustomField>