force-app/main/default/objects/Order/fields/netsuite_conn__NetSuite_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__NetSuite_Order_Date__c</fullName>
    <description>Date used to determine the date range in which this transaction appears on the Sales Order Register in NetSuite.</description>
    <label>NetSuite Order Date</label>
    <type>Date</type>
</CustomField>