force-app/main/default/objects/Order/fields/netsuite_conn__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Native opportunity field is not exposed on API, so creating custom field to maintain the relationship between NetSuite Sales orders to Salesforce opportunity.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>NetSuite Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>