force-app/main/default/objects/Order/fields/netsuite_conn__Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Ship_Date__c</fullName>
    <description>Ship date for this transaction.</description>
    <label>Ship Date</label>
    <type>Date</type>
</CustomField>